fix: Refactored API, CRUD and schemes
